resources/styles/app.css
/* ... */
.chef-of-the-week .container {
  grid-area: 3 / 2 / 4 / 3;
  margin-top: 2rem;
}

@media (max-width: 768px) {
  .chef-of-the-week .container {
    margin: 0 1rem;
    margin-top: 4rem;
  }

  .chef-of-the-week .container h2 {
    font-size: large;
  }
}

.chef-of-the-week .container .restaurants-list {
  list-style: none;
  display: flex;
  justify-content: flex-start;
  flex-direction: row;
  padding: 0;
}

.chef-of-the-week .restaurant-card img {
  height: 13.5rem;
  width: 14rem;
}

.chef-of-the-week .restaurant-card h1 {
  padding-bottom: 1rem;
  font-weight: 300;
  font-size: 1.8rem;
}

.chef-of-the-week .restaurant-card .restaurant-card-content {
  padding-bottom: 2.25rem;
  margin-top: -0.5rem;
}

@media (max-width: 768px) {
  .chef-of-the-week .restaurant-card .restaurant-card-content {
    margin: 0;
  }
  .chef-of-the-week .restaurant-card h1 {
    margin-bottom: 2rem;
  }
}

/* ABOUT US Section */

.about-us {
  background-color: #fafafa;
  padding: 3rem 0;
}

@media (max-width: 768px) {
  .about-us {
    padding: 0 1rem;
    text-align: center;
  }
}

.about-us .container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 0.2fr 0fr 0.4fr;
  grid-column-gap: 0;
  margin-left: 9rem;
  align-items: center;
}

@media (max-width: 768px) {
  .about-us .container {
    display: flex;
    flex-direction: column;
    margin: auto;
    padding: 0;
  }
}

.about-us .container h1 {
  grid-area: 1 / 1 / 2 / 3;
  font-size: xx-large;
  margin: 0;
}

.about-us .container .about-us-info {
  font-size: large;
  margin: 0;
  grid-area: 2 / 1 / 3 / 2;
}

@media (max-width: 768px) {
  .about-us .container h1 {
    font-size: medium;
    margin-top: 2rem;
    margin-bottom: 0;
  }

  .about-us .container .about-us-info {
    font-size: medium;
    margin: 0;
  }
}

.about-us .container .about-us-brand {
  margin: 0 9rem;
  grid-area: 2 / 2 / 3 / 3;
}

.about-us .container .about-us-brand a {
  text-decoration: none;
  color: black;
  letter-spacing: 1rem;
}

.about-us .container .about-us-brand img {
  height: 9rem;
}

@media (max-width: 768px) {
  .about-us .container .about-us-brand img {
    height: 7rem;
  }

  .about-us .container .about-us-brand h2 {
    font-weight: 300;
    font-size: large;
  }
}

.about-us .about-us-buttons {
  display: flex;
  grid-area: 3 / 1 / 4 / 3;
}

@media (max-width: 768px) {
  .about-us .about-us-buttons {
    font-size: small;
  }
}

.about-us .about-us-buttons .download-button {
  font-size: 0.75rem;
}

.about-us .about-us-buttons .download-button:first-child {
  margin-right: 1rem;
}

.download-button a {
  display: flex;
  flex-direction: row;
  align-items: center;
  /* width: fit-content; */
  width: 10rem;
  border: 1px solid #000;
  border-radius: 9px;
  padding: 0.6rem;
  justify-content: space-evenly;
  text-decoration: none;
  color: #000;
}

.download-button a span {
  margin: 0 0.5rem;
  font-weight: 300;
}

.download-button a span div {
  font-weight: bolder;
  font-size: larger;
}

@media (max-width: 768px) {
  .about-us .container .about-us-buttons {
    margin: 2rem 0;
    margin-bottom: 5rem;
  }

  .about-us .container .about-us-brand {
    margin: 2rem 9rem;
  }
}

@media (max-width: 390px) {
  .about-us .container .about-us-buttons {
    flex-direction: column;
    gap: 1rem;
    margin-top: 0;
  }
}

/* Footer */

footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 2rem 0;
  box-shadow: 0 -1px 2px 0 rgb(0 0 0 / 5%);
  position: static;
  bottom: 0;
  width: 100%;
}

footer div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 26rem;
}

footer div a {
  text-decoration: none;
  color: #000;
  font-size: large;
}

@media (max-width: 768px) {
  footer div {
    flex-direction: column;
    margin: auto;
    text-align: center;
  }
  footer div a {
    margin: 1rem 0;
  }
}

/* Restaurants page */

.restaurants .title {
  font-weight: 300;
}

@media (min-width: 768px) {
  .restaurants .title {
    display: none;
  }
}

.tabs .menu {
  display: flex;
  list-style: none;
  justify-content: space-evenly;
  padding: 0;
}
@media (min-width: 768px) {
  .tabs {
    display: flex;
    justify-content: center;
  }

  .tabs .menu {
    gap: 2rem;
  }
}
.tabs .menu .menu-item a {
  text-decoration: none;
  color: #000;
}

.tabs .menu .current_page_item {
  font-weight: 300;
}

.restaurants .container .restaurants-list {
  display: grid;
  grid-template-columns: repeat(2, minmax(10rem, 1fr));
  gap: 1rem;
  justify-items: center;
  overflow: initial;
}

.restaurants .container {
  padding: 0 1rem;
}

.restaurants .container .restaurants-list .restaurant-card {
  width: 12rem;
}

.restaurants .container .restaurants-list .restaurant-card img {
  width: 12rem;
}

#restaurants-page
  .restaurants
  .container
  .restaurants-list
  .restaurant-card
  img {
  height: 9rem;
}

#restaurants-page
  .restaurants
  .container
  .restaurants-list
  .restaurant-card
  .restaurant-card-content {
  margin: 0;
}

@media (min-width: 768px) {
  .restaurants .container .restaurants-list {
    display: grid;
    grid-template-columns: repeat(3, fit-content(10rem));
    gap: 1rem;
    justify-items: center;
    overflow: initial;
  }

  .restaurants .container .restaurants-list .restaurant-card {
    width: initial;
  }

  .restaurants .container .restaurants-list .restaurant-card img {
    width: initial;
  }
}

/* Mobile Menu */

#mobile-menu {
  display: none;
  position: relative;
  height: 100vh;
  width: 100vw;
  background-color: white;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#mobile-menu #mobile-menu-close-btn {
  position: absolute;
  width: 100vw;
  padding-left: 7rem;
  top: 1.5rem;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
}

#mobile-menu #mobile-menu-close-btn img {
  margin-bottom: 0.5rem;
}

#mobile-menu .content {
  margin-top: -19rem;
  font-weight: 300;
}
/* ... */

